# math-teacher

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml  taskfile.yaml
protos/: teacher.proto
python/client/: pyproject.toml
python/client/src/client/: __main__.py  client.py
rust/server/: Cargo.toml  build.rs
