[package]
name = "server"
build = "build.rs"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
log.workspace = true
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true

[lints]
workspace = true

[[bin]]
name = "server"

[build-dependencies]
tonic-prost-build.workspace = true
